--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.mooy1</groupId>
-    <artifactId>ResourcePackGenerator</artifactId>
+    <artifactId>SlimefunTextureGenerator</artifactId>
     <version>1.0</version>
 
     <properties>
